<resources>
    <string name="app_name">DiscoveryWeather</string>
    <string name="btn_post_text">Provide a Weather Recording</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_wind_more_info">More Info</string>

    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <string name="label_temp">Temperature</string>
    <string name="label_temp_units">\u2103</string>
    <string name="label_pressure">Pressure</string>
    <string name="label_pressure_unit">hPa</string>
    <string name="label_speed">Wind Speed</string>
    <string name="label_speed_unit">m/s</string>
    <string name="label_direction">Wind Direction</string>
    <string name="label_rain">Rainfall</string>
    <string name="label_snow">Snowfall</string>
    <string name="label_precipitation_unit">mm</string>
    <string name="label_conditions">Overall Conditions</string>
    <string name="display_error">ERROR</string>
    <string name="display_wind_direction">%d\u00B0</string>
    <string name="placeholder_condition">-Select Condition-</string>

    <string name="units_direction">\u00B0</string>

    <string name="text_thank_you">
        Thank You for submitting a recording of the weather where you are!
    </string>
    <string name="text_map_inx">
        Use the map to set the location for which you are submitting this weather reading.
        If you have provided the permission to the location services you can press the
        button in the corner to get your current location.
    </string>
    <string name="text_report_inx">
        If you don\'t have a measurement for a given field just leave it blank.
        The only required selection is the overall conditions.
    </string>
    <string name="text_wind_more_info">
        To determine the wind direction, face into the oncoming wind.
        Use this as direction put into this application.
        For example, an easterly wind is blowing towards you when you are facing East.
    </string>
    <string name="text_cancel">
        Cancel weather reading submission?
        Please note the data previous entered will be unretrievable.
    </string>

    <string name="btn_north">N</string>
    <string name="btn_north_east">NE</string>
    <string name="btn_east">E</string>
    <string name="btn_south_east">SE</string>
    <string name="btn_south">S</string>
    <string name="btn_south_west">SW</string>
    <string name="btn_west">W</string>
    <string name="btn_north_west">NW</string>

    <string name="check_indeterminate_wind">Don\'t know</string>
</resources>
