<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:importantForAccessibility="no"
    tools:context=".WeatherReport">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="64dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="32dp">

            <TextView
                android:id="@+id/textTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:labelFor="@id/editTemp"
                android:text="@string/label_temp"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAccessibility="no"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/editTemp"
                    android:text="@string/label_temp_units"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:labelFor="@id/editPressure"
                android:text="@string/label_pressure"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editPressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAccessibility="no"
                    android:inputType="numberDecimal"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textPressureUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_pressure_unit"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_direction"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/seekWind"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginEnd="64dp"
                android:max="359" />

            <TextView
                android:id="@+id/textDirectionDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_error"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:labelFor="@id/editSpeed"
                android:text="@string/label_speed"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAccessibility="no"
                    android:inputType="numberDecimal"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textSpeedUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_speed_unit"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textRain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:labelFor="@id/editRain"
                android:text="@string/label_rain"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editRain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAccessibility="no"
                    android:inputType="number"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textRainUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_precipitation_unit"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textSnow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:labelFor="@id/editSnow"
                android:text="@string/label_snow"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editSnow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAccessibility="no"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textSnowUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_precipitation_unit"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textConditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_conditions"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textConditionSelected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:text="@string/display_error"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioSunny"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_sunny" />

                <RadioButton
                    android:id="@+id/radioOvercast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_overcast" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioRaining"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_rainy" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableLayout>

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>